fixed public html files

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,7 @@
 <html>
     <body>
-        <div>
-            <a href="./about-this-site.html">About this site</a>
-            <a href="./about-tobias.html">About Tobias</a>
-            <a href="./technology-used.html">Technology used</a>
-        </div>
-        <p id="hello-world"></p>
-        <script src="../src/index.js"></script>
+        <div id="section-nav"></div>
+        <div id="section-content"></div>
+        <script type="module" src="./src/index.js"></script>
     </body>
 </html>
